# checkrs

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.org
.github/workflows/: release.yml
examples/: config  config.toml
src/: cli.rs  commands.rs  config.rs  constants.rs  lib.rs  main.rs  utils.rs
src/cli/: schemas.rs  subcommands.rs
src/config/: schemas.rs
