[package]
name = "checkrs"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4"
regex = "1"
colored = "2"
threadpool = "1.8.1"
clap = { version = "3.2.17", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
